ef core database and scaffolding

--- a/BookStoreApp.API/appsettings.json
+++ b/BookStoreApp.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+    "ConnectionStrings": {
+        "BookStoreAppDb": "Data Source=(localdb)\\MSSQLLocalDB;Database=BookStoreDb;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
+    },
 
     "Serilog": {
         "MinimumLevel": {
@@ -19,5 +22,5 @@
             }
         ]
     },
-  "AllowedHosts": "*"
+    "AllowedHosts": "*"
 }
