done authentication and authorization

--- a/BookStoreApp.API/appsettings.json
+++ b/BookStoreApp.API/appsettings.json
@@ -22,5 +22,10 @@
             }
         ]
     },
+    "JwtSettings": {
+        "Issuer": "BookStoreAPI",
+        "Audience": "BookStpreApiClient",
+        "Duration": 1
+    },
     "AllowedHosts": "*"
 }
